# just_audio_windows

.github/: FUNDING.yml
just_audio/example/: pubspec.yaml
just_audio/example/lib/: main.dart
just_audio/example/windows/runner/: Runner.rc
just_audio_windows/: CHANGELOG.md  README.md  pubspec.yaml
just_audio_windows/example/: README.md  pubspec.yaml
just_audio_windows/example/lib/: main.dart
just_audio_windows/example/test/: widget_test.dart
just_audio_windows/example/windows/: CMakeLists.txt
just_audio_windows/example/windows/runner/: Runner.rc  main.cpp
just_audio_windows/lib/: just_audio_windows.dart
just_audio_windows/test/: just_audio_windows_test.dart
just_audio_windows/windows/: CMakeLists.txt  just_audio_windows_plugin.cpp  player.hpp
